fix: add wrapping
adding wrapping will prevent overflow

--- a/style.css
+++ b/style.css
@@ -205,11 +205,11 @@
   display: flex;
   flex-direction: column;
   margin: 50px;
-
 }
 .media-objects {
   display: flex;
   justify-content: center;
+  flex-wrap: wrap;
 }
 .media-object .desc {
   text-align: center;
